src/test/ui/const-generics/infer/method-chain.full.stderr
error[E0282]: type annotations needed
  --> $DIR/method-chain.rs:21:33
   |
LL |     Foo.bar().bar().bar().bar().baz();
   |                                 ^^^
   |
   = note: cannot infer the value of the const parameter `N`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
